--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ footer {
     background: black;
     height: 18vh;
     opacity: 75%;
-    margin: -5% auto;
+    margin: 0 auto;
     width: 100%;
     text-align: center;
     color: white;  
